--- a/package.json
+++ b/package.json
@@ -19,10 +19,24 @@
     "@vue/cli-service": "^3.1.4",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.11.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0-0",
     "postcss-pxtorem": "^4.0.1",
     "vue-template-compiler": "^2.5.17"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
   "postcss": {
     "plugins": {
