--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "vant": "^1.4.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
