--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     },
     "dependencies": {
         "amfe-flexible": "^2.2.1",
+        "axios": "^0.18.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
         "vant": "^1.4.3",
         "vue": "^2.5.17",
+        "vue-axios": "^2.1.4",
         "vue-router": "^3.0.1"
     },
     "devDependencies": {
