--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vant": "^1.4.3",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
