--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "qrcodejs2": "0.0.2",
     "vant": "^1.4.3",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
